Overflow fix for record description text.

--- a/sass/includes/_record-details.scss
+++ b/sass/includes/_record-details.scss
@@ -18,6 +18,8 @@
         th {
             font-weight: bold;
         }
+
+        .xslt_patches{ word-break: break-word;}
     }
 
     &__related-tags {
